<resources>
    <string name="app_name">TlesStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="soporte">Soporte</string>
    <string name="productos">Productos</string>
    <string name="inicio">Inicio</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_comida">Comida</string>
    <string name="menu_supermercado">Supermercado</string>
    <string name="menu_farmacia">Farmacia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="correo_telefono">Correo o teléfono</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="no_tener_cuenta">¿Aún no tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_legal">Nombre legal</string>
    <string name="apellido">Apellido</string>
    <string name="iniciar_session">Iniciar sesión</string>
    <string name="el_nombre_no_debe_quedar_vacio">El nombre no debe quedar vacío</string>
    <string name="el_apellido_no_debe_quedar_vacio">El apellido no debe quedar vacío</string>
    <string name="el_correo_no_debe_quedar_vacio">El correo o el teléfono no debe quedar vacío</string>
    <string name="el_pass_no_debe_quedar_vacio">La contraseña no debe quedar vacía</string>
    <string name="el_correo_o_el_telefono_no_son_validos">El correo o el teléfono no son válidos</string>
    <string name="ya_existe_un_correo_o_un_telefono">Ya existe un correo o un teléfono</string>
    <string name="no_existen_un_usuario_con_estas_credenciales">No existe un usuario con estas credenciales</string>
    <string name="el_usuario_fue_dado_de_baja_comunicate_con_nosotros_para_resolver_el_problema">El usuario fue dado de baja, comunícate con nosotros para resolver el problema</string>
    <string name="hola">Hola</string>
    <string name="puntos">Puntos</string>
    <string name="pasos_aprovar">Pasos por aprovar</string>
    <string name="faltante">Faltante</string>
    <string name="en_espera">En espera</string>
    <string name="aprovado">Aprovada</string>
    <string name="identificacion_oficial_con_curp_ine_o_ife">Identificación oficial con curp (INE o IFE)</string>
    <string name="pasos_revisados">Pasos revisados</string>
    <string name="pasos_en_revision">Pasos en revision</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="acuerdo_legal">Acuerdo legal</string>
    <string name="ciudad">Ciudad</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="mensaje_bienvenido">Necesitas aprobar los siguientes pasos para poder empezar a vender</string>
    <string name="mensaje_ine">En este apartado se colocará una imagen frontal de tu identificación oficial (INE o IFE)</string>
    <string name="mensaje_foto_perfil">En este apartado se colocará una fotografía recién tomada para verificar si es usted el del registro</string>
    <string name="mensaje_nombre">En este apartado se colocará nombre completo con apellidos, lo cuales tienen que coincidir con el de tu identificación oficial (INE O IFE)</string>
    <string name="mensaje_nombre_tienda">En este apartado se colocará nombre del negocio que usted quiere dar de alta en la plataforma</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_tienda">Nombre de la tienda</string>
    <string name="felicidades">Felicidades</string>
    <string name="mensaje_registro_termiando">El registro ya fue terminado, ya podrás dar de alta tus productos</string>
    <string name="aceptar_acuerdo_legal">Aceptar acuerdo legal</string>
    <string name="galeria">Galeria</string>
    <string name="camara">Camara</string>
    <string name="no_se_ha_seleccionado_imagen">No se ha seleccionado ninguna imagen</string>
    <string name="tomar_foto">Tomar foto</string>
</resources>