<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="mx.com.TheThree.TlesStore.ui.FragmentApp.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.com.TheThree.TlesStore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mx.com.TheThree.TlesStore.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mx.com.TheThree.TlesStore.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_producto"
        android:name="mx.com.TheThree.TlesStore.ui.FragmentApp.ProductosFragment"
        android:label="@string/productos"
        tools:layout="@layout/fragment_slideshow" />
</navigation>