<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_logo" />

        <EditText
            android:id="@+id/etCorreoTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/correo_telefono" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/primary"
            android:text="@string/iniciar"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOlvidarPassoword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/olvidaste_contrasena" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tener_cuenta" />

        <TextView
            android:id="@+id/tvRegistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/registrate"
            android:textColor="@color/secundary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>