<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarFotoPerfilActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvMensajeIniciar"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/foto_perfil"
            android:textStyle="bold"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/tvMensajeBienvenida"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_foto_perfil"
            android:textColor="@color/black"
            android:textSize="15dp"/>


        <Button
            android:layout_width="wrap_content"
            android:text="@string/tomar_foto"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:id="@+id/btnCamara"
            android:backgroundTint="@color/secundary"
            android:layout_height="wrap_content"/>


        <ImageView
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:scaleType="fitXY"
            android:id="@+id/ivImagen"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/llBtnRotate"
        android:visibility="gone"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar">

        <ImageButton
            android:id="@+id/btnRotacionleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_rotate_left"
            android:backgroundTint="@color/secundary"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btnRotacionRidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rotate_right"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/secundary"
            app:tint="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/primary"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>